// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package bingo;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc Ping (PingI) returns (PingO){}
  rpc Delete (DeleteI) returns (DeleteO) {}
  rpc Info (InfoI) returns (InfoO) {}
  rpc Search (SearchI) returns (SearchO) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}


//Modelo de datos

message PingI {
     string id = 1;
     string name =2;
     string packages = 3;
     string version =4;
     string ip = 5;
     int32 status = 6;
     int32 delayNumber = 7;
     int32 port = 8;
     string group = 9;
}

message PingO {
 string id = 1;
 int32 status = 2;
}

message DeleteI {
  string id = 1;
}
message DeleteO {
  bool res = 1;
}

message InfoI{
 string id = 1;
}
message InfoO{
 string id = 1;
 string name =2;
 string packages = 3;
 string version =4;
 string ip = 5;
 int32 status = 6;
 int32 delayNumber = 7;
 int32 port = 8;
 string group = 9;
}
message SearchI{
 string name = 1;
}
message SearchO {
  repeated RegistryService dummy = 1;
}

message RegistryService {
 string id = 1;
 string name =2;
 string packages = 3;
 string version =4;
 string ip = 5;
 int32 status = 6;
 int32 delayNumber = 7;
 int32 port = 8;
 string group = 9;
}